# git-repo-agent

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
docs/adr/: 001-replace-sdk-mcp-servers-with-pre-computed-context.md  002-tool-search-not-applicable.md  003-switch-to-claude-sdk-client-for-interactive-workflows.md  004-worktree-isolation-for-agent-changes.md  005-non-interactive-scheduled-execution.md  006-blueprint-state-machine-driver.md  007-new-command-orchestrator.md  008-onboard-two-phase-interaction.md  009-standalone-install-prompt-fallback.md
scripts/: compile_prompts.py
src/git_repo_agent/: __init__.py  blueprint_driver.py  creator.py  intent.py  main.py  non_interactive.py  orchestrator.py  plugin_enroller.py  worktree.py
src/git_repo_agent/agents/: __init__.py  blueprint.py  configure.py  diagnose.py  docs.py  quality.py  security.py  test_runner.py
src/git_repo_agent/hooks/: __init__.py  safety.py
src/git_repo_agent/prompts/: blueprint.md  compiler.py  configure.md  diagnose.md  diagnose_workflow.md  docs.md  health.md  maintain.md  onboard.md  orchestrator.md  quality.md  security.md  test_runner.md
src/git_repo_agent/templates/: README.md.tmpl  gitignore-default.tmpl  gitignore-go.tmpl  gitignore-python.tmpl  gitignore-rust.tmpl  gitignore-typescript.tmpl  prd-0001.md.tmpl
src/git_repo_agent/tools/: __init__.py  attributes.py  health_check.py  pipeline_collector.py  repo_analyzer.py  report.py  stack_profile.py
tests/: test_blueprint_driver.py  test_compiler_standalone.py  test_completion.py  test_creator.py  test_handoff.py  test_health_check_detection.py  test_intent.py  test_maintain_freshness.py  test_new_command.py  test_non_interactive.py  test_orchestrator_display.py  test_plugin_enroller.py  test_stack_profile.py  test_worktree_changes.py
