[project]
name = "git-repo-agent"
version = "1.0.0"
description = "Claude Agent SDK app for repo onboarding and maintenance"
readme = "README.md"
authors = [
    { name = "Lauri Gates", email = "lauri.gates@forumvirium.fi" }
]
requires-python = ">=3.10"
dependencies = [
    "claude-agent-sdk>=0.1.39",
    "rich>=14.3.3",
    "typer>=0.24.0",
]

[project.scripts]
git-repo-agent = "git_repo_agent.main:app"

[build-system]
requires = ["uv_build>=0.10.2,<0.11.0"]
build-backend = "uv_build"
